# dodona

./: .gitignore  README.md  __init__.py  bearclaw.py  functionThreading.py  glaze.py  glazed.py  keyboards.py  optimization.py  sprinkles.py  wordlists.py
core/: CMakeLists.txt
core/inc/: DataFormat.h  DataFormat_py.h  FitnessFunctions.h  FitnessResult.h  Keyboard.h  Polygon.h  RadixTree_py.h  WordList.h  WordList_py.h
core/inc/InputModels/: InputModel.h  InputVector.h  Interpolation.h  NeuralNetworkModel.h  SimpleGaussianModel.h  SimpleInterpolationModel.h
core/src/: DataFormat.cpp  Keyboard.cpp  Polygon.cpp  PythonDefinitions.cpp  RadixTree.cpp  WordList.cpp
core/src/FitnessFunctions/: ExactEfficiency.cpp  MonteCarloEfficiency.cpp
core/src/InputModels/: InputModel.cpp  InputVector.cpp  Interpolation.cpp  SimpleGaussianModel.cpp  SimpleInterpolationModel.cpp
cruller/: CMakeLists.txt  CMakeLists_MacPy3.txt
cruller/inc/: Configuration.h  FitnessFunctions.h  FitnessResult.h  InputModel.h  Keyboard.h  Keyboard_py.h  Polygon.h  Polygon_py.h  RadixTree.h  Serialization.h  TrainingDataFileFormat.h  WordList.h  WordList_py.h
cruller/inc/InputModels/: InputModel.h  InputModel_py.h  InputVector.h  Interpolation.h  NeuralNetworkModel.h  NeuralNetworkModel_py.h  SimpleGaussianModel.h  SimpleInterpolationModel.h  SimpleInterpolationModel_py.h
cruller/src/: FitnessResult.cpp  Keyboard.cpp  Polygon.cpp  PythonDefinitions.cpp  RadixTree.cpp  WordList.cpp
cruller/src/FitnessFunctions/: FastEfficiency.cpp  MonteCarloEfficiency.cpp  RadixMonteCarloEfficiency.cpp
cruller/src/InputModels/: InputVector.cpp  Interpolation.cpp  NeuralNetworkModel.cpp  SimpleGaussianModel.cpp  SimpleInterpolationModel.cpp
include/: WordList.h
