IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  MESSAGE("IN OSX MODE")  
  SET(CMAKE_CXX_COMPILER /usr/bin/clang++)
  SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libstdc++")
ENDIF()

SET(LIBRARY_NAME cruller)
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)
AUX_SOURCE_DIRECTORY(src/InputModels INPUT_MODELS)
AUX_SOURCE_DIRECTORY(src/FitnessFunctions FITNESS_FUNCTIONS)

option(fann "static" OFF)
IF(NOT fann)
  list(REMOVE_ITEM INPUT_MODELS src/InputModels/NeuralNetworkModel.cpp)
  add_definitions(-DNO_FANN)
ENDIF()

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${SOURCE_FILES} ${INPUT_MODELS} ${FITNESS_FUNCTIONS})

option(static "static" OFF)
IF(static)
    ADD_LIBRARY(${LIBRARY_NAME} STATIC ${SOURCE_FILES} ${INPUT_MODELS} ${FITNESS_FUNCTIONS})
    MESSAGE("Building static version of the library.")
ENDIF(static)

INCLUDE_DIRECTORIES("inc")

#don't add lib before the library
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES PREFIX "../")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
  SET(CMAKE_BUILD_TYPE "DEBUG")
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "DEBUG")
  #SET(CMAKE_BUILD_TYPE "RELEASE")
ENDIF()

FIND_PACKAGE(Boost)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)
  FIND_PACKAGE(Boost COMPONENTS iostreams serialization python3)

  MESSAGE("Linking libraries" ${Boost_LIBRARIES})
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${Boost_LIBRARIES})
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  SET(PYTHON_LIBRARY /opt/local/Library/Frameworks/Python.framework/Versions/3.4/lib/libpython3.4.dylib)
  SET(PYTHON_INCLUDE_DIR /opt/local/Library/Frameworks/Python.framework/Versions/3.4/include/python3.4m)
ENDIF()

FIND_PACKAGE(PythonLibs 3.2)
IF(PYTHONLIBS_FOUND)
  INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_DIRS}")
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${PYTHON_LIBRARIES})
ELSE()
  MESSAGE(FATAL_ERROR "Unable to find PythonLibs.")
ENDIF()

IF(fann)
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} fann)
ENDIF()

IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  IF(CMAKE_COMPILER_IS_GNUCXX)
    ADD_DEFINITIONS("-Wall")
  ELSE()
    MESSAGE(FATAL_ERROR "CMakeLists.txt has not been tested/written for your compiler.")
  ENDIF()
ENDIF()



